# NEditMV

./: BUILDING  FAQ  Makefile.in  README  README-NEditMV  README-win32.txt  acconfig.h  aclocal.m4  build_commands.txt  config.h.in  configure  configure.in  mkinstalldirs  nc.man  nedit.doc  nedit.man  patchZ.CHANGES  project.json
source/: MVversion.h.in  Makefile.in  clearcase.c  clearcase.h  comnedit.com  file.c  file.h  help.c  help.c.in  help.h  highlight.c  highlight.h  highlightData.c  highlightData.h  interpret.c  interpret.h  lnknedit.com  macro.c  macro.h  menu.c  menu.h  n.bm  nc.c  nc.dep  nc.dsp  nc.mak  nedit.bm  nedit.c  nedit.dep  nedit.dsp  nedit.h  nedit.mak  parse.c  parse.c_noyacc  parse.h  parse.y  preferences.c  preferences.h  regularExp.c  regularExp.h  (+35 more)
util/: DialogF.c  DialogF.h  Makefile.in  comutil.com  fileUtils.c  fileUtils.h  fontsel.c  fontsel.h  getfiles.c  getfiles.h  managedList.c  managedList.h  misc.c  misc.h  prefFile.c  prefFile.h  printUtils.c  printUtils.h  util.dep  util.dsp  util.mak  vmsParam.h  vmsUtils.c  vmsUtils.h
win32/: MVversion.h  build.bat  config.h
